--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Cid, approximately 1043-1099 -- Fiction'
+- GITenberg
 title: 'The Cid Campeador: A Historical Romance'
 url: http://www.gutenberg.org/ebooks/41990
